homepage form funcational

--- a/src/scss/layouts/_quotation-request.scss
+++ b/src/scss/layouts/_quotation-request.scss
@@ -175,115 +175,7 @@
     }
   }
   .open-garage{
-    position: relative;
-    .btn.btn-gray{
-      position: relative;
-      @include font-size(19px);
-      border-bottom-#{$right}-radius: 0 !important;
-      margin-bottom: 5px;
-      display: flex;
-      align-items: center;
-      padding: 6px 20px;
-      @include media-breakpoint-down(md){
-        padding-right: 10px;
-        padding-left: 10px;
-        span{
-          display: none;
-        }
-      };
-      i{
-        @include font-size(30px);
-        height: 30px;
-        @include if-rtl{
-          -moz-transform: scaleX(-1);
-         -o-transform: scaleX(-1);
-         -webkit-transform: scaleX(-1);
-         transform: scaleX(-1);
-         filter: FlipH;
-         -ms-filter: "FlipH";
-         left: 5px;
-        };
-      }
-    }
-    > p{
-      position: absolute;
-      top: -5px;
-      #{$right}: 15px;
-      border-radius: 100%;
-      @include font-size(15px);
-      color: $white;
-      background: $brand-color;
-      padding: 0 5px;
-      margin-bottom: 0;
-      border: 1px solid $white;
-      min-width: 22px;
-      text-align: center
-    }
-    .select-input{
-      position: absolute;
-      z-index: 3;
-      width: calc(100% - 15px);
-      height: 100%;
-      @include media-breakpoint-down(md){
-        width: calc(100% - 30px);
-      };
-      &:hover + a{
-        background: $dark-gray;
-      }
-    }
-
-    .select__indicators{
-      display: none;
-    }
-    .select__value-container,
-    .select__control{
-      background: transparent !important;
-    }
-    .select__single-value{
-      display: none !important;
-    }
-    .select__menu{
-      #{$left}: auto !important;
-      #{$right}:0 !important;
-      margin-top: -10px !important;
-      @include media-breakpoint-down(md){
-        #{$right}: if-rtl(-30px, 0) !important;
-
-      }
-    }
-    .placeholder{
-      display: flex;
-      align-items: center;
-      color: $basic-gray;
-      @include opacity(1);
-      i{
-        @include font-size(33px);
-        @include opacity(0.7);
-        margin-#{$right}: 5px;
-        height: 35px;
-      }
-      h6{
-        font-weight: 400;
-        @include font-size(16px);
-        margin-bottom: 0;
-        p{
-          @include font-size(13px);
-          @include opacity(0.8);
-          white-space: nowrap;
-          margin-top: 2px;
-          @include media-breakpoint-down(md){
-            display: none;
-          };
-        }
-      }
-    }
-    .select__menu-list{
-      .select__option{
-        padding-top: 20px;
-        padding-bottom: 20px;
-        @include font-size(16px);
-      }
-    }
+   @extend .open-garage;
   }
   .sec-shadow{
     @include box-shadow;
