--- a/src/scss/layouts/_home-details.scss
+++ b/src/scss/layouts/_home-details.scss
@@ -200,8 +200,24 @@
   }
 }
 .form-details{
+	.open-garage {
+		@extend .open-garage;
+	}
+	.form-row:first-child {
+		justify-content: flex-end;
+	}
     @include media-breakpoint-down(md){
-      padding-#{$left}: 50px;
+	  padding-#{$left}: 50px;
+
+	  .form-row {
+		  [class*='col']{
+			margin-top: 10px;
+		  }
+		  [class*='col']:nth-last-child(){
+			margin-top: 0;
+		  }
+	  }
+
     };
     @include media-breakpoint-down(sm){
       padding-#{$left}: 0;
